<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:key="pref_category_settings"
        android:title="@string/pref_category_settings">
        <ListPreference
            android:defaultValue="@string/gcm_heartbeat_interval_default"
            android:dialogTitle="@string/pref_gcm_heartbeat_interval_wifi_title"
            android:entries="@array/gcm_heartbeat_intervals_wifi"
            android:entryValues="@array/gcm_heartbeat_interval_values_wifi"
            android:key="pref_gcm_heartbeat_interval_wifi"
            android:persistent="true"
            android:title="@string/pref_gcm_heartbeat_interval_wifi_title" />
        <ListPreference
            android:defaultValue="@string/gcm_heartbeat_interval_default"
            android:dialogTitle="@string/pref_gcm_heartbeat_interval_mobile_title"
            android:entries="@array/gcm_heartbeat_intervals_mobile"
            android:entryValues="@array/gcm_heartbeat_interval_values_mobile"
            android:key="pref_gcm_heartbeat_interval_mobile"
            android:persistent="true"
            android:title="@string/pref_gcm_heartbeat_interval_mobile_title" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="pref_category_permissions"
        android:title="@string/pref_category_permissions">
        <Preference
            android:key="pref_exact_alarm"
            android:persistent="false"
            android:title="@string/pref_exact_alarm_title" />
        <Preference
            android:key="pref_battery_optimization"
            android:persistent="false"
            android:title="@string/pref_battery_optimization_title" />
    </PreferenceCategory>
</PreferenceScreen>
